--- a/.github/workflows/execution-flow.yml
+++ b/.github/workflows/execution-flow.yml
@@ -79,7 +79,7 @@ jobs:
     if: failure()
     runs-on: ubuntu-latest
     steps:
-      name: Output information
-      run: |
+      - name: Output information
+        run: |
         echo "Something went wrong"
         echo "${{ github }}"
