--- a/.github/workflows/reusable.yml
+++ b/.github/workflows/reusable.yml
@@ -4,5 +4,5 @@ jobs:
   deploy:
     runs-on: ubuntu-latest
     steps:
-      name: Output information
-      run: echo "Deploying and uploading..."
+      - name: Output information
+        run: echo "Deploying and uploading..."
